; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/v3d/extr_v3d_drv.c_v3d_postclose.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/v3d/extr_v3d_drv.c_v3d_postclose.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { i32 }
%struct.drm_file = type { %struct.v3d_file_priv* }
%struct.v3d_file_priv = type { i32* }

@V3D_MAX_QUEUES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.drm_device*, %struct.drm_file*)* @v3d_postclose to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @v3d_postclose(%struct.drm_device* %0, %struct.drm_file* %1) #0 {
  %3 = alloca %struct.drm_device*, align 8
  %4 = alloca %struct.drm_file*, align 8
  %5 = alloca %struct.v3d_file_priv*, align 8
  %6 = alloca i32, align 4
  store %struct.drm_device* %0, %struct.drm_device** %3, align 8
  store %struct.drm_file* %1, %struct.drm_file** %4, align 8
  %7 = load %struct.drm_file*, %struct.drm_file** %4, align 8
  %8 = getelementptr inbounds %struct.drm_file, %struct.drm_file* %7, i32 0, i32 0
  %9 = load %struct.v3d_file_priv*, %struct.v3d_file_priv** %8, align 8
  store %struct.v3d_file_priv* %9, %struct.v3d_file_priv** %5, align 8
  store i32 0, i32* %6, align 4
  br label %10

10:                                               ; preds = %22, %2
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @V3D_MAX_QUEUES, align 4
  %13 = icmp ult i32 %11, %12
  br i1 %13, label %14, label %25

14:                                               ; preds = %10
  %15 = load %struct.v3d_file_priv*, %struct.v3d_file_priv** %5, align 8
  %16 = getelementptr inbounds %struct.v3d_file_priv, %struct.v3d_file_priv* %15, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  %18 = load i32, i32* %6, align 4
  %19 = zext i32 %18 to i64
  %20 = getelementptr inbounds i32, i32* %17, i64 %19
  %21 = call i32 @drm_sched_entity_destroy(i32* %20)
  br label %22

22:                                               ; preds = %14
  %23 = load i32, i32* %6, align 4
  %24 = add i32 %23, 1
  store i32 %24, i32* %6, align 4
  br label %10

25:                                               ; preds = %10
  %26 = load %struct.v3d_file_priv*, %struct.v3d_file_priv** %5, align 8
  %27 = call i32 @kfree(%struct.v3d_file_priv* %26)
  ret void
}

declare dso_local i32 @drm_sched_entity_destroy(i32*) #1

declare dso_local i32 @kfree(%struct.v3d_file_priv*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
